# rust-dsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
daisy/: Cargo.toml  README.md
daisy/.cargo/: config.toml
daisy/src/: acid.rs  dsp.h  gpio.rs  main.cpp  main.rs  midi.rs  params.rs  test_seq.rs
dsp/: Cargo.toml
dsp/src/: adsr.rs  distortion.rs  env.rs  filter.rs  lib.rs  lowpass_filter.rs  osc.rs  panic.rs  patch.rs  smoother.rs  svf.rs  voice.rs
host/: Cargo.toml
host/src/: config.rs  control.rs  main.rs  midi.rs  params.rs  stream.rs
